--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,10 @@
     font-family: 'Cinzel', serif;
     }
 
+#noteTitle {
+  font-size: 20px;
+}
+
 textarea, input {
     display: block;
     width: 100%;
